fix: change z-index for overlay

--- a/src/style/common/_overlay.scss
+++ b/src/style/common/_overlay.scss
@@ -2,6 +2,7 @@
 .overlay {
   @include hide-scroll;
   position: fixed;
+  z-index: 100;
   display: grid;
   place-items: center;
   width: 100%;
